fixtures/errors/bad_import_kind.hu
@use my_entry from "bad_import_entry.hu"
